# Next_Bite_REST_API

./: .env  Cargo.toml  README.md  configuration.yaml  users.json
migrations/: 20211217032229_create_subscriptions_table.sql
src/: README.md  configuration.rs  handlers.rs  lib.rs  main.rs  register.rs  startup.rs  vars.rs
src/routes/: mod.rs  sign_up.rs
tests/: health_check.rs  subscribe_returns_a_200_for_valid_form_data.rs  subscribe_returns_a_400_when_data_is_missing.rs
