[package]
name = "auth_server"
version = "0.1.0"
authors = ["Joe <marjij@sunyit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt ="2.0.2"
actix-session= "0.3"
actix-web = "3"
chrono ={version = "0.4.19", features = ["serde"]}
color-eyre = "0.5"
derive_more ="0.99.11"
dotenv ="0.15.0"
env_logger ="0.8.2"
eyre = "0.6"
lettre = "0.9.5"
mongodb = "1.1.1"
native-tls = "0.2.4"
openssl = { version = "0.10", features = ["v110"]}
r2d2 = "0.8.8"
r2d2-mongodb = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features= ["env_logger"]}
tracing-subscriber ="0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3.11"