[package]
authors = ["Joe <marjij@sunypoly.edu>"]
edition = "2018"
name = "nb_backend"
version = "0.1.0"
[[bin]]
name = "nb_backend"
path = "src/main.rs"

[dependencies]
actix-codec = "^0.4.1"
actix-http = "3.0.0-beta.9"
actix-rt = "^2.0.2"
actix-session = "0.3"
actix-web = "4.0.0-beta.8"
color-eyre = "0.5"
config = "0.11.0"
derive_more = "0.99.11"
dotenv = "0.15.0"
env_logger = "0.8.2"
eyre = "0.6"
futures = "0.3.11"
lettre = "0.10.0-rc.4"
native-tls = "^0.2.4"
reqwest = "0.11.0"
serde_json = "1.0"
sha2 = "0.9.2"
tokio = "1.14.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.openssl]
features = ["v110"]
version = "0.10"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.sqlx]
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
version = "0.5.9"

[dependencies.tracing-log]
features = ["env_logger"]
version = "0.1"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8"

[lib]
name = "nb_backend"
path = "src/lib.rs"